// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeverityPill renders P1 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 jVBEYL"
    type="P1"
  >
    P1
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P2 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 hvJowx"
    type="P2"
  >
    P2
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P3 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 hWnMmO"
    type="P3"
  >
    P3
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P4 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 cYJsgH"
    type="P4"
  >
    P4
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders negative trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 hvJowx"
    type="negative"
  >
    -123
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders no trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 eJSgPA"
    type="none"
  >
    0
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders positive trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 iMfUiN"
    type="positive"
  >
    123
  </span>
</DocumentFragment>
`;
